<resources>
    <string name="app_name">FirstAppActivity</string>


    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estas por debajo de lo optimo para tu peso y altura</string>

    <string name="title_normal">Normal</string>
    <string name="description_normal">Estas en tu peso apropiado</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estas por encima de lo optimo para tu peso y altura</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estas muy por encima de lo optimo para tu peso y altura</string>
    <string name="intelligence">intelligence</string>
    <string name="combat">combat</string>
    <string name="power">power</string>
    <string name="durability">durability</string>
    <string name="speed">speed</string>
    <string name="strength">strength</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>